# craft-rank

./: .gitignore  README.md
craft-rank/: CMakeLists.txt
craft-rank/app/: CMakeLists.txt  main.cpp
craft-rank/data/: check24-profis.db
craft-rank/rank_algo/: craft_rank.cpp  craft_rank.h
craft-rank/src/: CMakeLists.txt
craft-rank/src/db_reader/: database_reader.cpp
craft-rank/src/rank_algo/: CMakeLists.txt  craft_rank.cpp  craft_rank.h
old/: Dockerfile
server/: compose.yaml  package-lock.json  package.json
server/bridge/: Dockerfile  package-lock.json
server/bridge/craft-rank/: CMakeLists.txt
server/bridge/craft-rank/src/: main.cpp
server/bridge/craft-rank/src/db_reader/: CMakeLists.txt  database_reader.cpp  database_reader.h
server/bridge/craft-rank/src/rank_algo/: CMakeLists.txt  core.cpp  core.h  craft_rank.cpp  craft_rank.h
server/bridge/src/: index.js  index_openapi.js
server/database/: Dockerfile
server/src/: index.js
